# grain-processor

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/source/: api.rst  conf.py  contribution.rst  index.rst  installation.rst  installation_editable.rst  usage.rst
grain_processor/: __init__.py  example.ipynb  grain_plotter.py  grain_processor.py  grain_segmenter.py  utils.py
