[project]
name = "grain-processor"
dynamic = ["version"]
description = "Package for processing SEM images of films"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipywidgets>=8.1.5",
    "matplotlib>=3.10.0",
    "opencv-python>=4.11.0.86",
    "scikit-image>=0.25.1",
]

[project.optional-dependencies]
plot = [
    "ipympl>=0.9.6",
    "pyqt6>=6.8.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.4",
    "ruff>=0.9.3",
]
