[project]
name = "grain-processor"
dynamic = ["version"]
description = "Package for processing SEM images of films"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipywidgets>=8.1.5",
    "matplotlib>=3.10.0",
    "opencv-python>=4.11.0.86",
    "scikit-image>=0.25.1",
]

[project.optional-dependencies]
plot = [
    "ipympl>=0.9.6",
    "pyqt6>=6.8.0",
]
docs = [
    "docstrfmt>=1.9.0",
    "furo>=2024.8.6",
    "sphinx>=8.1.3",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-autodoc-typehints>=3.0.1",
    "sphinx-codeautolink>=0.16.2",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.4",
    "ruff>=0.9.3",
]
